css/style.css
*{
    margin: 0;
    padding: 0;
    font-family: Verdana, Geneva, Tahoma, sans-serif;
}

.container{
    width: 100%;
    min-height: 100vh;
    box-sizing: border-box;
    overflow: hidden;
    background-color: #111927;
    background-image: radial-gradient(at 30% 30%, hsl(70, 100%, 20%) 0, transparent 59%), radial-gradient(at 70% 70%, hsl(230, 100%, 20%) 0, transparent 55%);
    background: url(../pics/background.jpg) no-repeat;  
    background-attachment: fixed;
    background-position: center;
    background-size: cover;
}

.content {
    padding-left: 8%;
    padding-right: 8%;
}

.navbar {
    width: 100%;
    display: flex;
    align-items: center;
    box-shadow: 5px 5px 5px;
    padding: 30px 0;
    backdrop-filter: blur(10px) saturate(100%);
    -webkit-backdrop-filter: blur(10px) saturate(100%);
    background-color: rgba(30, 30, 30, 0.75);
    border-radius: 0 0 12px 12px;
    border: 1px solid rgba(255, 255, 255, 0.125);
}

.logo {
    width: 190px;
    margin-top: 3.5em;
    margin-left: 8%;
    position: absolute;
    backdrop-filter: blur(10px) saturate(100%);
    -webkit-backdrop-filter: blur(10px) saturate(100%);
    border-radius: 15px;
}

.menu-icon{
    display: none;
}

nav{
    flex: 1;
    text-align: right;
    padding-right: 8%;
}

nav ul li{
    list-style: none;
    display: inline-block;
}

nav ul li a{
    color: #bbadbe;
    font-size: 120%;
    text-decoration: none;
    padding-left: 20px;
    font-style: italic; 

}

nav ul li a:hover{
    color: #af83b9;
    cursor: pointer;
}

#lang{
    font-size: 225%;
    position: absolute;
    margin-top: -0.9em;
    font-style: normal; 
}

.activeTab{
    text-decoration-line: underline;
    text-decoration-thickness: 3px;
}

#menuList{
    margin-top: -1em;
}

h1{
    color: #bbadbe;
}

h2{
    color: #bbadbe;
}

p{
    color: #bbadbe;
    font-size: 100%;
}

.row{
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin: 100px 0;
}

.col-1{
    flex-basis: 80%;
    position: relative;
    padding: 2%;
    box-shadow: 10px 10px 10px;

    backdrop-filter: blur(10px) saturate(100%);
    -webkit-backdrop-filter: blur(10px) saturate(100%);
    background-color: rgba(30, 30, 30, 0.75);
    border-radius: 0 12px 0 12px;
    border: 1px solid rgba(255, 255, 255, 0.125);

    z-index: 1;
}

.col-2{
    position: relative;
    flex-basis: 60%;
    display: flex;
    align-items: center;
}

.col-2 .fotovonmir{
    width: 50%;
    box-shadow: 10px 10px 10px;
    margin-left: 30%;
}

.col-2 .catFront {
    position: fixed;
    width: 40%;
    bottom: 0;
    right: 0;
}

.comic {
    width: 125%;
    box-shadow: 10px 10px 10px;
    margin-left: 50%;
    color: black;
}

#popupButton {
    color: white;
    font-size: 100%;
    padding: 5px;
    text-decoration: none;
    background-color: #e0d94c;
    box-shadow: 5px 5px 5px black;

    backdrop-filter: blur(10px) saturate(100%);
    -webkit-backdrop-filter: blur(10px) saturate(100%);
    background-color: rgba(30, 30, 30, 0.75);
    border-radius: 0 12px 0 12px;
    border: 1px solid rgba(255, 255, 255, 0.125);
}

#popupButton:hover{
    color: #af83b9;
    cursor: pointer;
}

.Popup {
    display: none;
    position: fixed;
    z-index: 3;
    padding-top: 100px;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    overflow: auto;
    background-color: rgba(0,0,0,0.4);
}
  
.popupContent {
    margin: auto;
    padding: 20px;
    width: 80%;
    color: #bbadbe;

    backdrop-filter: blur(10px) saturate(100%);
    -webkit-backdrop-filter: blur(10px) saturate(100%);
    background-color: rgba(30, 30, 30, 0.75);
    border-radius: 0 12px 0 12px;
    border: 1px solid rgba(255, 255, 255, 0.125);
}

.close {
    color: #bbadbe;
    float: right;
    font-size: 28px;
    font-weight: bold;
}

.close:hover, .close:focus {
    color: #af83b9;
    text-decoration: none;
    cursor: pointer;
}

.socialmedia img{
    height: 30px;
    margin: 5px;
    cursor: pointer;
    padding: 5px;
    box-shadow: 5px 5px 5px;

    backdrop-filter: blur(10px) saturate(100%);
    -webkit-backdrop-filter: blur(10px) saturate(100%);
    background-color: rgba(30, 30, 30, 0.75);
    border-radius: 0 12px 0 12px;
    border: 1px solid rgba(255, 255, 255, 0.125);
}

.socialmedia{
    text-align: center;
    position: fixed;
    bottom: 0;
    width: 100%;
    left: 0;
    overflow: hidden;
}

.socialmedia a{
    color: black;
}

#aboutmelinks{
    margin-top: 10px;
}

#aboutmelinks li{
    list-style: none;
    display: inline-block;
}

#aboutmelinks li a{
    color: #bbadbe;
    font-size: 100%;
    padding: 5px;
    text-decoration: none;
    box-shadow: 5px 5px 5px black;

    backdrop-filter: blur(10px) saturate(100%);
    -webkit-backdrop-filter: blur(10px) saturate(100%);
    background-color: rgba(30, 30, 30, 0.75);
    border-radius: 0 12px 0 12px;
    border: 1px solid rgba(255, 255, 255, 0.125);
}

#aboutmelinks li a:hover{
    color: #af83b9;
    cursor: pointer;
}

#catpics img{
    width: 50%;
    margin: 8px;
    box-shadow: 10px 10px 10px;
}

.technolist li{
    color: #bbadbe;
    font-size: 100%;
    padding: 5px;
    margin: 10px;
    text-decoration: none;
    box-shadow: 5px 5px 5px black;
    list-style: none;

    backdrop-filter: blur(10px) saturate(100%);
    -webkit-backdrop-filter: blur(10px) saturate(100%);
    background-color: rgba(50, 50, 50, 0.75);
    border-radius: 0 12px 0 12px;
    border: 1px solid rgba(255, 255, 255, 0.125);
}

table{
    margin-left: 10%;
    text-align: center;
    box-shadow: 5px 5px 5px black;

    backdrop-filter: blur(10px) saturate(100%);
    -webkit-backdrop-filter: blur(10px) saturate(100%);
    background-color: rgba(30, 30, 30, 0.75);
    border-radius: 0 12px 0 12px;
    border: 1px solid rgba(255, 255, 255, 0.125);
}

table tr th{
    color: #bbadbe;
    font-size: 100%;
    padding: 5px;

    backdrop-filter: blur(10px) saturate(100%);
    -webkit-backdrop-filter: blur(10px) saturate(100%);
    background-color: rgba(30, 30, 30, 0.75);
    border-radius: 0 12px 0 12px;
    border: 1px solid rgba(255, 255, 255, 0.125);
}

table tr td{
    color: #bbadbe;
    font-size: 100%;
    padding: 5px;

    backdrop-filter: blur(10px) saturate(100%);
    -webkit-backdrop-filter: blur(10px) saturate(100%);
    background-color: rgba(30, 30, 30, 0.75);
}

.neofetch{
    width: 100%;
    box-shadow: 10px 10px 10px;
    color:black;
}

#fullpic img{
    width: 100%;
}

@media only screen and (max-width:900px){

    .navbar{
        max-height: 1.5em;
    }

    nav ul{
        width: 100%;
        position: absolute;
        top: 100px;
        right: 0;
        z-index: 2;
        box-shadow: 10px 10px 10px;

        backdrop-filter: blur(10px) saturate(100%);
        -webkit-backdrop-filter: blur(10px) saturate(100%);
        background-color: rgba(30, 30, 30, 0.75);
        border-radius: 0 0 12px 12px;

    }

    nav ul li{
        display: block;
        margin-top: 10px;
        margin-bottom: 10px;
    }

    nav ul li a{
        box-shadow: 0 0 0;  
        cursor: pointer;
        margin-right: 10px;
    }

    .menu-icon{
        display: inline;
        width: 9em;
        margin-right: 4%;
    }

    .menu-icon a{
        font-size: 300%;
        margin-right: 10%;
        cursor: pointer;
    }

    .menu-icon img{
        width: 45px;
        cursor: pointer;
    }

    #menuList{
        overflow: hidden;
        transition: 0.5s;
        z-index: 3;
    }

    .logo{
        margin-left: 4%;
        width: 190px;
        z-index: 4;
    }

    .row{
        flex-direction: column;
        margin: 50px 0;
    }

    .col-2{
        flex-basis: 100%;
        margin-bottom: 50px;
        margin-top: 50px;
    }
    
    .col-2 .fotovonmir{
        width: 77%;
        transform: translateX(0px);
    }

    .col-2 .catFront {
        width: 65%;
    }

    .col-1{
        flex-basis: 100%;
        margin-top: 2em;
        z-index: 1;
    }

    #aboutmelinks li{
        margin: 1%;
    }

    .popupContent{
        font-size: 50%;
        margin-top: 50px;
    }

    table{
        margin: 1%;
    }

    .comic {
        margin-left: 0;
    }
}

@media only screen and (max-width:600px){
    .col-2 .catFront {
        width: 85%;
    }
}

@media only screen and (max-width:500px){
    .col-2 .catFront {
        width: 100%;
    }
}

